--- a/CatetanNgutang/AndroidManifest.xml
+++ b/CatetanNgutang/AndroidManifest.xml
@@ -23,6 +23,10 @@
                 <action android:name="android.intent.action.MAIN"/>
             </intent-filter>
         </activity>
+        <provider
+            android:name="com.pegelinux.catetanngutang.HutangContentProvider"
+            android:authorities="com.pegelinux.catetanngutang.hutangdatabaseprovider"
+            android:exported="true"/>
     </application>
 
 </manifest>
